# budgeted

./: .dockerignore  .gitignore  ARCHIVED.md  CLAUDE.md  hor.py
.rollouts/v1/: biggie-max-polara_run1_54291afe.json  biggie-max-polara_run1_61e89b1b.json  biggie-max-polara_run1_7b850912.json  biggie-max-polara_run1_80f90f96.json  biggie-max-polara_run1_9bfd46ff.json  biggie-max-polara_run2_348941b2.json  biggie-max-polara_run2_63a9c584.json  biggie-max-polara_run2_76c99d79.json  biggie-max-polara_run2_d3e5e3eb.json  biggie-max-polara_run2_dfcc6ebc.json  biggie-max-polara_run3_05db6196.json  biggie-max-polara_run3_79375947.json  biggie-max-polara_run3_b3c9e300.json  biggie-max-polara_run3_cc6a4351.json  biggie-max-polara_run3_efcd842d.json  biggie-max-polara_run4_2ea47817.json  biggie-max-polara_run4_32e01cb3.json  biggie-max-polara_run4_86282d59.json  biggie-max-polara_run4_ae6bf1db.json  biggie-max-polara_run4_ec599630.json  biggie-max-polara_run5_029dbfa8.json  biggie-max-polara_run5_1e54c5e6.json  biggie-max-polara_run5_9e92e243.json  biggie-max-polara_run5_ca6d0a53.json  biggie-max-polara_run5_e3eee489.json
.rollouts/v2/: biggie-max-polara_run1_606c0389.json  biggie-max-polara_run1_6714117c.json  biggie-max-polara_run1_725262de.json  biggie-max-polara_run2_61af09e8.json  biggie-max-polara_run2_80fae4d6.json  biggie-max-polara_run2_aca1e774.json  biggie-max-polara_run3_2d7f6e63.json  biggie-max-polara_run3_d2321d05.json  biggie-max-polara_run3_fff427d9.json  (+8 more)
readmes/: README_building_the_world.md  README_general_direction.md  README_submission.md  WORKLOG.md  band_method.md  budgeted_acquisition_proposal.md  world_architecture.md
tasks/budgeted-derma/src/venvs/: pyproject.toml
tasks/budgeted-unsw/src/venvs/: pyproject.toml
tasks_def/: __init__.py  band_manifest.py  budgeted_covtype.py  budgeted_derma.py  budgeted_diabetes.py  budgeted_hydraulic.py  budgeted_tep.py  budgeted_thyroid.py  budgeted_unsw.py  label_budget_covtype.py  label_budget_covtype_open.py
(+171 files in other folders)
