[project]
name = "task-env"
version = "0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
default-groups = []

# CPU-only PyTorch (no CUDA): pin torch to the CPU wheel index so the image stays lean.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

# Both venvs get the SAME full package set (torch pinned CPU): the student env and the grader env
# never differ, so no import ever fails on a missing package regardless of which side runs the code.
[dependency-groups]
model = [
    "numpy==2.1.3",
    "scikit-learn==1.5.2",
    "xgboost==2.1.3",
    "torch==2.5.1",
    "pytest==8.3.4",
    "pytest-json-report==1.5.0",
]
grader = [
    "numpy==2.1.3",
    "scikit-learn==1.5.2",
    "xgboost==2.1.3",
    "torch==2.5.1",
    "pytest==8.3.4",
    "pytest-json-report==1.5.0",
]
