[project]
name = "task-env"
version = "0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
default-groups = []

# CPU-only PyTorch (no CUDA): pin torch to the CPU wheel index so the image stays lean.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[dependency-groups]
# Student env: trains a partial-observation predictor + acquisition policy (runs the Policy, sandboxed).
model = [
    "numpy==2.1.3",
    "scikit-learn==1.5.2",
    "xgboost==2.1.3",
    "torch==2.5.1",
]
# Grader env: runs verify.py (the mediated loop driver + balanced-accuracy scoring). No torch here;
# the student's Policy runs in model_venv via the sandboxed policy_runner.
grader = [
    "numpy==2.1.3",
    "scikit-learn==1.5.2",
    "pytest==8.3.4",
    "pytest-json-report==1.5.0",
]
